fixed issue with footer icons not aligning on the services page. Could not find the error but copied and pasted the footer section rom the index html over to the services html and it now aligns

--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ textarea {
 
 .contact-submit {
  width: 20vw;
- height: 5vh;
+ height: 8vh;
 }
 
 
@@ -321,6 +321,7 @@ textarea {
     display: flex;
     justify-content: center;
     text-align: center;
+    align-items: center;
     flex-direction: column;
     color: #3c3a3a;
    padding-left: 40px;    
@@ -366,9 +367,11 @@ footer {
     box-shadow: 1px 1px 5px;
     border-radius: 25px;
     padding-top: 40px;
+  
 }
 #spotify {
     border-color: #3ECFAF;
+    
 }
 #youtube {
     border-color: #DE75A6;
